<resources>
    <string name="app_name">collegeSpace Application</string>
    <string name="camera_button_text">Capture Image</string>
    <string name="watermark_button_text">Add Watermark</string>
    <string name="upload_button_text">Upload Image</string>
    <string name="setting_menu_title">Settings</string>
    <string name="content_description_of_recyclerView">Captured Photographs</string>
    <string name="color_pref_key">Color</string>
    <string name="c1" translatable="false">Indigo</string>
    <string name="c2" translatable="false">Dark Blue</string>
    <string name="c3" translatable="false">Dark pink</string>
    <string name="c4" translatable="false">Gray</string>
    <string name="c5" translatable="false">Red</string>
    <string name="c6" translatable="false">Flesh Tint</string>
    <string name="c7" translatable="false">Light Green</string>
    <string name="c8" translatable="false">Light Blue</string>
    <string name="c9" translatable="false">Black</string>
    <string name="c10" translatable="false">Purple</string>
    <string name="edit_text_preference_title">Watermark Size</string>
    <string name="default_value_of_size">150</string>
    <string name="default_value_of_watermark">www.collegespace.com</string>
    <string name="reset_image_button_text">RESET IMAGE</string>
    <string name="pref_watermark_key">watermark_title</string>
    <string name="pref_watermark_title">Watermark String</string>
    <string name="underline_checkbox_title">Underline</string>
    <string name="underline_checkbox_key">underline_checkbox_key</string>
    <string name="error_toast_message">Image Neither Captured Nor Uploaded</string>
    <string name="alpha_pref_title">Transparency</string>
    <string name="alpha_pref_key">alpha_pref_key</string>
    <string name="alpha_pref_default_value">23</string>
    <string name="alpha_pref_summary">An integer between 1–255</string>
    <string name="angle_pref_title">Rotation Angle</string>
    <string name="angle_pref_key">angle_pref_key</string>
    <string name="angle_pref_default_value">45</string>
    <string name="angle_pref_summary">Rotation is clockwise</string>
    <string name="x_coordinate_pref_title">X Coordinate</string>
    <string name="x_coordinate_pref_key">x_coordinate_pref_key</string>
    <string name="x_coordinate_pref_default_value">12</string>
    <string name="x_coordinate_pref_summary">Should be integer</string>
    <string name="y_coordinate_pref_title">Y Coordinate</string>
    <string name="y_coordinate_pref_key">y_coordinate_pref_key</string>
    <string name="y_coordinate_pref_default_value">18</string>
    <string name="y_coordinate_pref_summary">Should be integer</string>
    <string name="save_image_button_text">SAVE IMAGE</string>
    <string name="toast_images_added">Images added</string>
    <string name="toast_permissions_given">PERMISSIONS GIVEN!</string>
    <string name="toast_insufficient_permissions">INSUFFICIENT PERMISSIONS!</string>
    <string name="toast_error_getCropped">Error on getting cropped images</string>
    <string name="toast_image_cropped">Images cropped</string>
</resources>
